--- a/qua20-10.html
+++ b/qua20-10.html
@@ -6,218 +6,181 @@
 <title>💖 Món quà 20/10 💐</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: linear-gradient(135deg, #fce4ec 0%, #f8bbd0 100%);
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-    perspective: 1000px;
-  }
+body {
+  margin:0;
+  padding:0;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+  background:linear-gradient(135deg,#fce4ec 0%,#f8bbd0 100%);
+  font-family:'Quicksand',sans-serif;
+  text-align:center;
+  overflow:hidden;
+  position:relative;
+  perspective:1000px;
+}
 
-  #note {
-    color: #880e4f;
-    font-size: 20px;
-    font-weight: 700;
-    margin-top: 25px;
-    animation: glowText 2.5s ease-in-out infinite alternate;
-    text-shadow: 0 0 6px rgba(255,182,193,0.7);
-  }
+#note {
+  color:#880e4f;
+  font-size:20px;
+  font-weight:700;
+  margin-top:25px;
+  text-shadow:0 0 6px rgba(255,182,193,0.7);
+}
 
-  @keyframes glowText {
-    from {opacity:0.7; transform:scale(1);}
-    to {opacity:1; transform:scale(1.02);}
-  }
+#gift-box {
+  width:300px;
+  cursor:pointer;
+  transition:transform 0.3s ease,box-shadow 0.3s ease;
+  z-index:5;
+  box-shadow:0 10px 15px rgba(0,0,0,0.2);
+  border-radius:10px;
+  will-change:transform;
+}
 
-  #gift-box {
-    width: 300px;
-    cursor: pointer;
-    transition: transform 0.5s ease, box-shadow 0.5s ease;
-    animation: pulse 2s infinite ease-in-out;
-    z-index: 5;
-    box-shadow: 0 10px 15px rgba(0,0,0,0.2);
-    border-radius: 10px;
-    will-change: transform;
-  }
+#gift-box:hover {
+  transform:scale(1.05);
+  box-shadow:0 12px 25px rgba(255,105,180,0.5);
+}
 
-  #gift-box:hover {
-    transform: scale(1.05);
-    box-shadow: 0 12px 25px rgba(255,105,180,0.5);
-  }
+.fade-out { animation: fadeOut 0.8s forwards; }
+@keyframes fadeOut {
+  from {opacity:1; transform:scale(1);}
+  to {opacity:0; transform:scale(0.7);}
+}
 
-  @keyframes pulse {
-    0% {transform:scale(1);}
-    50% {transform:scale(1.05);}
-    100% {transform:scale(1);}
-  }
+#card {
+  display:none;
+  background:#fffcf8;
+  border-radius:25px;
+  border:12px solid #fce4ec;
+  box-shadow:0 0 25px rgba(255,105,180,0.4);
+  padding:50px;
+  width:85%;
+  max-width:650px;
+  text-align:center;
+  opacity:0;
+  transform:scale(0.8);
+  position:relative;
+  overflow:hidden;
+  will-change:transform,opacity;
+  background-image:radial-gradient(#ffebee 10%,transparent 10%), radial-gradient(#ffcdd2 10%,transparent 10%);
+  background-size:20px 20px;
+  background-position:0 0,10px 10px;
+}
 
-  .fade-out { animation: fadeOut 1s forwards; }
-  @keyframes fadeOut {
-    from {opacity:1; transform:scale(1);}
-    to {opacity:0; transform:scale(0.7);}
-  }
+#card::before {
+  content:'';
+  position:absolute;
+  top:20px; left:20px; right:20px; bottom:20px;
+  border:2px dashed #ff99b3;
+  border-radius:10px;
+  pointer-events:none;
+  z-index:1;
+}
 
-  #card {
-    display: none;
-    background: #fffcf8;
-    border-radius: 25px;
-    border: 12px solid #fce4ec;
-    box-shadow: 0 0 25px rgba(255,105,180,0.4);
-    padding: 50px;
-    width: 85%;
-    max-width: 650px;
-    text-align: center;
-    opacity: 0;
-    transform: scale(0.8);
-    position: relative;
-    overflow: hidden;
-    will-change: transform, opacity;
-    background-image: radial-gradient(#ffebee 10%, transparent 10%),
-                      radial-gradient(#ffcdd2 10%, transparent 10%);
-    background-size: 20px 20px;
-    background-position: 0 0, 10px 10px;
-  }
+@keyframes cardFlipIn {
+  0% {transform:scale(0.8) rotateX(90deg); opacity:0;}
+  100% {transform:scale(1) rotateX(0deg); opacity:1;}
+}
 
-  #card::before {
-    content:'';
-    position:absolute;
-    top:20px; left:20px; right:20px; bottom:20px;
-    border:2px dashed #ff99b3;
-    border-radius:10px;
-    pointer-events:none;
-    z-index:1;
-  }
+#card.show { display:block; animation:cardFlipIn 1.2s ease-out forwards; }
 
-  @keyframes cardFlipIn {
-    0% {transform:scale(0.8) rotateX(90deg); opacity:0;}
-    100% {transform:scale(1) rotateX(0deg); opacity:1;}
-  }
+#card h1 {
+  color:#b80050;
+  font-family:'Playfair Display',serif;
+  font-size:45px;
+  margin:10px 0 20px 0;
+  font-weight:700;
+  text-shadow:2px 2px 3px rgba(0,0,0,0.2);
+}
 
-  #card.show {
-    display: block;
-    animation: cardFlipIn 1.5s ease-out forwards;
-  }
+#card p {
+  font-size:18px;
+  color:#111;
+  line-height:1.6;
+  font-family:'Quicksand',sans-serif;
+  font-weight:500;
+  text-align:center;
+  width:90%;
+  margin:0 auto;
+  word-wrap:break-word;
+  overflow-wrap:break-word;
+}
 
-  #card h1 {
-    color:#b80050;
-    font-family:'Playfair Display', serif;
-    font-size:45px;
-    margin:10px 0 20px 0;
-    font-weight:700;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.2);
-    animation: titlePulse 2.5s infinite ease-in-out;
-  }
+#card p strong { color:#ff3385; font-weight:700; }
 
-  @keyframes titlePulse {
-    0% {transform:scale(1);}
-    50% {transform:scale(1.01);}
-    100% {transform:scale(1);}
-  }
+.signature {
+  margin-top:30px;
+  font-family:'Playfair Display',serif;
+  font-size:28px;
+  color:#b80050;
+  font-weight:700;
+  text-align:center;
+  text-shadow:1px 1px 2px rgba(0,0,0,0.15);
+}
 
-  #card p {
-    font-size:18px;
-    color:#111;
-    line-height:1.6;
-    font-family:'Quicksand', sans-serif;
-    font-weight:500;
-    text-align:center;
-    width:90%;
-    margin:0 auto;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-  }
+.line {
+  opacity:0;
+  transform:translateY(15px);
+  display:block;
+  margin-bottom:12px;
+  text-align:center;
+}
 
-  #card p strong {
-    color:#ff3385;
-    font-weight:700;
-  }
+.line.show { animation: lineUp 0.8s cubic-bezier(0.25,0.46,0.45,0.94) forwards; }
 
-  .signature {
-    margin-top:30px;
-    font-family:'Playfair Display', serif;
-    font-size:28px;
-    color:#b80050;
-    font-weight:700;
-    text-align:center;
-    text-shadow:1px 1px 2px rgba(0,0,0,0.15);
-  }
+@keyframes lineUp { to {opacity:1; transform:translateY(0);} }
 
-  .line {
-    opacity:0;
-    transform: translateY(15px);
-    display:block;
-    margin-bottom:12px;
-    text-align:center;
-  }
+/* Tim rơi */
+.falling-heart {
+  position:fixed;
+  top:-10px;
+  pointer-events:none;
+  animation: fall 6s linear forwards;
+  z-index:1;
+  opacity:0.8;
+  font-size:14px;
+}
 
-  .line.show {
-    animation: lineUp 1s cubic-bezier(0.25,0.46,0.45,0.94) forwards;
-  }
+@keyframes fall { 0% {transform:translateY(0) rotate(0deg);} 100% {transform:translateY(110vh) rotate(360deg); opacity:0;} }
 
-  @keyframes lineUp {
-    to {opacity:1; transform:translateY(0);}
-  }
+/* Tim click */
+.click-heart {
+  position:fixed;
+  animation: floatUp 1s ease-out forwards;
+  font-size:20px;
+  pointer-events:none;
+}
 
-  /* Tim rơi */
-  .falling-heart {
-    position: fixed;
-    top: -10px;
-    pointer-events:none;
-    animation: fall 8s linear forwards;
-    z-index:1;
-    opacity:0.8;
-  }
+@keyframes floatUp { 0% {transform:translateY(0) scale(1);} 100% {transform:translateY(-80px) scale(1.5); opacity:0;} }
 
-  @keyframes fall {
-    0% {transform:translateY(0) rotate(0deg); opacity:0.8;}
-    100% {transform:translateY(110vh) rotate(360deg); opacity:0;}
-  }
+/* Confetti */
+.confetti {
+  position:fixed;
+  width:5px;
+  height:5px;
+  border-radius:50%;
+  opacity:0.9;
+  animation: confetti-fall 2.5s ease-out forwards;
+  z-index:20;
+}
 
-  .click-heart {
-    position: fixed;
-    animation: floatUp 1.5s ease-out forwards;
-    font-size:28px;
-    pointer-events:none;
-  }
+@keyframes confetti-fall { 0% {transform:translateY(0) rotate(0);} 100% {transform:translateY(100vh) rotate(360deg); opacity:0;} }
 
-  @keyframes floatUp {
-    0% {transform:translateY(0) scale(1); opacity:1;}
-    100% {transform:translateY(-100px) scale(2); opacity:0;}
-  }
-
-  .confetti {
-    position: fixed;
-    width: 6px;
-    height: 6px;
-    border-radius:50%;
-    opacity:0.9;
-    animation: confetti-fall 3s ease-out forwards;
-    z-index:20;
-  }
-
-  @keyframes confetti-fall {
-    0% {transform:translateY(0) rotate(0); opacity:1;}
-    100% {transform:translateY(100vh) rotate(720deg); opacity:0;}
-  }
-
-  /* Mobile optimizations */
-  @media(max-width:600px){
-    #card {border-radius:15px; border:8px solid #fce4ec; padding:25px 15px; width:95%; background-image:none;}
-    #card::before {top:15px; left:15px; right:15px; bottom:15px;}
-    #gift-box {width:250px;}
-    #note {font-size:16px;}
-    #card h1 {font-size:30px; margin-bottom:15px;}
-    #card p {font-size:14px; width:100%;}
-    .signature {font-size:20px; margin-top:20px;}
-    .line {margin-bottom:8px;}
-  }
+/* Mobile optimization */
+@media(max-width:600px){
+  #card {border-radius:15px; border:8px solid #fce4ec; padding:25px 15px; width:95%; background-image:none;}
+  #card::before {top:15px; left:15px; right:15px; bottom:15px;}
+  #gift-box {width:250px;}
+  #note {font-size:16px;}
+  #card h1 {font-size:30px; margin-bottom:15px;}
+  #card p {font-size:14px; width:100%;}
+  .signature {font-size:20px; margin-top:20px;}
+  .line {margin-bottom:8px;}
+}
 </style>
 </head>
 <body>
@@ -241,24 +204,23 @@
 </div>
 
 <script>
-const giftBox = document.getElementById('gift-box');
-const card = document.getElementById('card');
-const note = document.getElementById('note');
-const lines = document.querySelectorAll('.line');
+const giftBox=document.getElementById('gift-box');
+const card=document.getElementById('card');
+const note=document.getElementById('note');
+const lines=document.querySelectorAll('.line');
 
-function formatTextWithStrong(text){
-  return text.replace(/\*\*(.*?)\*\*/g,'<strong>$1</strong>');
-}
-lines.forEach(line => {line.innerHTML=formatTextWithStrong(line.textContent);});
+// Thay ** thành <strong>
+lines.forEach(line=>{
+  line.innerHTML=line.textContent.replace(/\*\*(.*?)\*\*/g,'<strong>$1</strong>');
+});
 
 giftBox.addEventListener('click',()=>{
   note.style.display="none";
   giftBox.src="2.png";
-  giftBox.style.animation="none";
   giftBox.style.cursor="default";
 
-  // Pháo giấy giảm số lượng
-  for(let i=0;i<10;i++){
+  // Confetti tối ưu
+  for(let i=0;i<5;i++){
     const conf=document.createElement("div");
     conf.classList.add("confetti");
     conf.style.left=Math.random()*100+"vw";
@@ -267,32 +229,27 @@ giftBox.addEventListener('click',()=>{
     conf.style.height=Math.random()*5+3+"px";
     conf.style.animationDuration=2+Math.random()*1+"s";
     document.body.appendChild(conf);
-    setTimeout(()=>conf.remove(),3000);
+    setTimeout(()=>conf.remove(),2500);
   }
 
   giftBox.classList.add("fade-out");
-
   setTimeout(()=>{
     giftBox.style.display="none";
     card.classList.add("show");
-    lines.forEach((line,i)=>{
-      setTimeout(()=>line.classList.add('show'),i*600);
-    });
-  },1200);
+    lines.forEach((line,i)=>{ setTimeout(()=>line.classList.add('show'),i*400); });
+  },1000);
 });
 
-// Tim rơi nền - giảm tần suất và size
+// Tim rơi nền - giảm số lượng
 setInterval(()=>{
   const heart=document.createElement("div");
   heart.textContent="💖";
   heart.classList.add("falling-heart");
   heart.style.left=Math.random()*100+"vw";
-  heart.style.fontSize=Math.random()*10+15+"px";
-  heart.style.opacity=Math.random()*0.5+0.5;
-  heart.style.animationDuration='8s';
+  heart.style.fontSize=Math.random()*6+12+"px";
   document.body.appendChild(heart);
-  setTimeout(()=>heart.remove(),8000);
-},1500);
+  setTimeout(()=>heart.remove(),6000);
+},2500);
 
 // Tim bay khi click
 document.addEventListener("click",e=>{
@@ -302,7 +259,7 @@ document.addEventListener("click",e=>{
   heart.style.left=e.clientX+"px";
   heart.style.top=e.clientY+"px";
   document.body.appendChild(heart);
-  setTimeout(()=>heart.remove(),1500);
+  setTimeout(()=>heart.remove(),1000);
 });
 </script>
 
