--- a/qua20-10.html
+++ b/qua20-10.html
@@ -340,10 +340,10 @@ body.fade-in {
   <div class="card-main-icon">❤️</div>
   <h1>🌷💖 Chúc Mừng 20/10 💐🌸</h1>
   <p>
-    <span class="line">Thân gửi [name] và các bạn nữ 12A11!</span>
+    <span class="line">Thân gửi [name]</span>
     <span class="line">Tặng những bông hoa rực rỡ nhất cho những người phụ nữ tuyệt vời nhất! 💐🌷</span>
-    <span class="line">🌹 Nhân ngày 20/10, tập thể nam sinh xin gửi những lời chúc tươi đẹp và tốt lành nhất tới [name] và các bạn nữ 12A11.</span>
-    <span class="line">🌸 Chúc [name] luôn vui vẻ, khỏe mạnh, mãi mãi trẻ trung và là người thắp lửa niềm đam mê cho chúng em.</span>
+    <span class="line">🌹 Nhân ngày 20/10, tập thể nam sinh xin gửi những lời chúc tươi đẹp và tốt lành nhất tới [name]</span>
+    <span class="line">🌸 Chúc [name] luôn vui vẻ, khỏe mạnh, mãi mãi trẻ trung 🌸</span>
     <span class="line">✨ Chúc các bạn nữ - những bông hoa rực rỡ của 12A11, luôn xinh đẹp, học tập thành công, và thật hạnh phúc trong mọi khoảnh khắc.</span>
     <span class="line">💕 Cảm ơn các bạn đã tạo nên những kỷ niệm đáng nhớ và tô thêm màu rực rỡ cho quãng thời gian cấp 3 này.</span>
     <span class="line">💐 Chúc [name] và các bạn có một ngày 20/10 thật ý nghĩa và ngập tràn niềm vui bên những người thân yêu!</span>
