--- a/qua20-10.html
+++ b/qua20-10.html
@@ -453,7 +453,7 @@ giftBox.addEventListener('click', () => {
 
 // Hiệu ứng rơi nền
 function startBackgroundEffects(isMobile) {
-    const backgroundIcons = ['💖', '🌸', '✨'];
+    const backgroundIcons = ['💖', '🌸'];
     const interval = isMobile ? 3000 : 1500; 
     
     setInterval(() => {
